--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -5,7 +5,7 @@ body{
 }
 
 #fondoBienvenida{
-    background-image: url('/images/megadeth1.jpg');
+    background-image: url('/images/megadeth1.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -69,7 +69,12 @@ body{
 .publicacionTarjeta {
     border-radius: 20px;
     max-width: 1000px;
-    padding-bottom: 18px;
+    padding-bottom: 15px;
+}
+
+.publicacionImagen {
+    border-radius: 50px;
+    max-width: 100px;
 }
 
 #tarjeta{
@@ -78,7 +83,7 @@ body{
 
 
 .headbangersLogo {
-    width: 20%;
+    width: 19%;
 }
 
 .logoBienvenida{
@@ -89,9 +94,10 @@ body{
 
 .scroll{
     margin-top: 40px;
+    margin-left: 100px;
     overflow-y: scroll;
     height: 762px;
-    width: 70%;
+    width: 50%;
 }
 
 .scroll::-webkit-scrollbar{
@@ -109,18 +115,18 @@ body{
 }
 @-webkit-keyframes animar{
     0%{-webkit-transform:translate(0px,0px);}
-    10%{-webkit-transform:translate(40px,40px);}
+    10%{-webkit-transform:translate(40px,20px);}
     20%{-webkit-transform:translate(0px,0px);}
-    30%{-webkit-transform:translate(40px,40px);}
+    30%{-webkit-transform:translate(40px,20px);}
     40%{-webkit-transform:translate(0px,0px);}
-    50%{-webkit-transform:translate(40px,40px);}
+    50%{-webkit-transform:translate(40px,20px);}
     60%{-webkit-transform:translate(0px,0px);}
-    70%{-webkit-transform:translate(40px,40px);}
+    70%{-webkit-transform:translate(40px,20px);}
     80%{-webkit-transform:translate(0px,0px);}
-    90%{-webkit-transform:translate(40px,40px);}
+    90%{-webkit-transform:translate(40px,20px);}
     100%{-webkit-transform:translate(0px,0px);}
 }
 
 .temblor:hover{
-    -webkit-animation: animar 0.2s 1;
+    -webkit-animation: animar 1s 10;
 }
