--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,25 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>\ \ \ \ \ \ Headbangers Cave / / / / / /</title>
+    <div th:replace="fragments/head.html"></div>
+    <title>\ \ \ \ \ \ Headbangers Cave / / / / / /</title>
+</head>
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-              integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/estilos.css">
-    </head>
+<body id='fondoBienvenida'>
+    <div class='temblor'>
+        <a th:href="@{/publicaciones}" >
+            <img class="logoBienvenida" src="../images/headbangersLogo.png" alt="Bienvenido a headbangers cave">
+        </a>
+    </div>
 
-    <body id='fondoBienvenida'>
-        <div class='temblor'>
-            <a th:href="@{/publicaciones}" >
-                <img class="logoBienvenida" src="../images/headbangersLogo.png" alt="Bienvenido a headbangers cave">
-            </a>
-        </div>
-
-        <div class="footer">
-            <p>Copyright • Todos los derechos reservados • 2022</p>
-        </div>
-    </body>
+    <div class="footer">
+        <p>Copyright • Todos los derechos reservados • 2022</p>
+    </div>
+</body>
 
 </html>
