--- a/src/main/resources/templates/lista_usuarios.html
+++ b/src/main/resources/templates/lista_usuarios.html
@@ -40,6 +40,9 @@
                     <button class="btn btn-warning">
                         <a class="text-decoration-none text-dark" th:href="@{/usuario/perfil/__${usuario.id}__}" >Ver Perfil</a>
                     </button>
+                    <button class="btn btn-danger" sec:authorize="hasAnyRole('USER')" th:if="${session.usuariosession.nombreu == usuario.nombreu}">
+                        <a class="text-decoration-none text-dark" th:href="@{/admin/eliminar_usuario/__${usuario.id}__}">Eliminar Usuario</a>
+                    </button>
                     <button class="btn btn-danger" sec:authorize="hasAnyRole('ADMIN')">
                         <a class="text-decoration-none text-dark" th:href="@{/admin/eliminar_usuario/__${usuario.id}__}">Eliminar Usuario</a>
                     </button>
