--- a/src/main/resources/templates/publicaciones.html
+++ b/src/main/resources/templates/publicaciones.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="scroll">
-            <div class="row mx-5">
+            <div class="row mx-3">
                 <div th:each="publicacion:${publicaciones}" class="publicacionTarjeta">
                     <div class="card bg-black" id='tarjeta'>
                         <div class="card-body">
@@ -64,7 +64,7 @@
                             </div>
                             <div th:unless="${publicacion.creador.imagen == null}">
                                 <a th:href="@{/usuario/perfil/__${publicacion.creador.id}__}">
-                                    <img class="publicacionTarjeta" th:src="${publicacion.creador.imagen.imagenUrl}" alt='foto de perfil' style="width: 140px" align='right'>
+                                    <img class="publicacionImagen" th:src="${publicacion.creador.imagen.imagenUrl}" alt='foto de perfil' style="width: 140px" align='right'>
                                 </a>
                             </div>
                             <h3 th:text="${publicacion.creador.nombreu}"></h3>
@@ -75,9 +75,13 @@
                             <a class="btn btn-light"  th:href="@{${publicacion.link}}" target="_blank">Ir al enlace</a>
                             <br>
 
-                            <span sec:authorize="hasAnyRole('USER', 'ADMIN')">
-                                <a th:href="@{/editar/__${publicacion.id}__}" class="btn btn-dark"  th:if="${session.usuariosession.nombreu == publicacion.creador.nombreu or hasRole == ADMIN}">Editar Publicación</a>
-                                <a th:href="@{/__${publicacion.id}__}" class="btn btn-danger" th:if="${session.usuariosession.nombreu == publicacion.creador.nombreu or hasRole == ADMIN}">Eliminar Publicación</a>
+                            <span sec:authorize="hasAnyRole('USER')">
+                                <a th:href="@{/editar/__${publicacion.id}__}" class="btn btn-dark"  th:if="${session.usuariosession.nombreu == publicacion.creador.nombreu}">Editar Publicación</a>
+                                <a th:href="@{/__${publicacion.id}__}" class="btn btn-danger" th:if="${session.usuariosession.nombreu == publicacion.creador.nombreu}">Eliminar Publicación</a>
+                            </span>
+                            <span sec:authorize="hasAnyRole('ADMIN')">
+                                <a th:href="@{/editar/__${publicacion.id}__}" class="btn btn-dark">Editar Publicación</a>
+                                <a th:href="@{/__${publicacion.id}__}" class="btn btn-danger">Eliminar Publicación</a>
                             </span>
                         </div>
                     </div>
