--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,9 +13,8 @@
         </a>
     </div>
 
-    <div class="footer">
-        <p>Copyright • Todos los derechos reservados • 2022</p>
-    </div>
+    <div class="footer" th:replace="fragments/footer.html"></div>
+
 </body>
 
 </html>
