--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,55 +2,47 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Headbangers Cave - Login</title>
+    <div th:replace="fragments/head.html"></div>
+    <title>Headbangers Cave - Login</title>
+</head>
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-              integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/estilos.css">
-    </head>
-    <body>
-        <nav>
-            <span>
-                <a th:href="@{/publicaciones}">
-                    <img class="headbangersLogo" src="../images/headbangersLogo.png" alt="Headbangers Cave">
-                </a>
-            </span>
-            <div class="navbarBotones">
-                <button class="btn btn-warning">
-                    <a class="text-decoration-none text-dark" th:href="@{/publicaciones}">Volver</a>
-                </button>
-            </div>
-        </nav>
-
-        <div>
-            <form th:action="@{/logincheck}" method="POST" class="formulario">
-
-                <div class="form-group my-3">
-                    <h3 class="reesplandor">Accede y publicá tu musica</h3>
-                </div>
-                <div class="form-group my-3">
-                    <input type="text" class="form-control" placeholder="Nombre de Usuario" name="nombreu"
-                           th:value="${nombreu}">
-                </div>
-                <div class="form-group my-3">
-                    <input type="password" class="form-control" placeholder="Contraseña" name="password">
-                </div>
-                <button type="submit" class="btn btn-light mt-3 botones">Entrar</button>
-
-            </form>
-            <br>
-            <div th:if="${error != null}" class="card text-white bg-transparent mb-3 mensajeError">
-                <div class="card-body">
-                    <h5 class="card-title">Error</h5>
-                    <p class="card-text" th:text="${error}"></p>
-                </div>
-            </div>
+<body>
+    <nav>
+        <span>
+            <a th:href="@{/publicaciones}">
+                <img class="headbangersLogo" src="../images/headbangersLogo.png" alt="Headbangers Cave">
+            </a>
+        </span>
+        <div class="navbarBotones">
+            <button class="btn btn-warning">
+                <a class="text-decoration-none text-dark" th:href="@{/publicaciones}">Volver</a>
+            </button>
         </div>
-        <div class="footer">
-            <p>Copyright • Todos los derechos reservados • 2022</p>
-        </div>
-    </body>
+    </nav>
+
+    <div>
+        <form th:action="@{/logincheck}" method="POST" class="formulario">
+
+            <div class="form-group my-3">
+                <h3 class="reesplandor">Accede y publicá tu musica</h3>
+            </div>
+            <div class="form-group my-3">
+                <input type="text" class="form-control" placeholder="Nombre de Usuario" name="nombreu"
+                       th:value="${nombreu}">
+            </div>
+            <div class="form-group my-3">
+                <input type="password" class="form-control" placeholder="Contraseña" name="password">
+            </div>
+            <button type="submit" class="btn btn-light mt-3 botones">Entrar</button>
+
+        </form>
+        <br>
+    <div th:replace="fragments/head.html"></div>
+
+    </div>
+    <div class="footer">
+        <p>Copyright • Todos los derechos reservados • 2022</p>
+    </div>
+</body>
 
 </html>
