--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -2,152 +2,127 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Headbangers Cave - Tu Perfil</title>
+    <div th:replace="fragments/head.html"></div>
+    <title>Headbangers Cave - Tu Perfil</title>
+</head>
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-              integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/estilos.css">
-    </head>
-
-    <body>
-        <nav sec:authorize="isAnonymous()">
-            <span>
-                <a th:href="@{/publicaciones}">
-                    <img class="headbangersLogo" src="/images/headbangersLogo.png" alt="Headbangers Cave">
-                </a>
-            </span>
-            <div class="navbarBotones">
-                <button class="btn btn-warning">
-                    <a class="text-decoration-none text-dark" th:href="@{/publicaciones}">Volver</a>
-                </button>
-            </div>
-        </nav>
-        <nav sec:authorize="hasAnyRole('USER','ADMIN')">
-            <span>
-                <a th:href="@{/usuario/dashboard}">
-                    <img class="headbangersLogo" src="/images/headbangersLogo.png" alt="Headbangers Cave">
-                </a>
-            </span>
-            <div class="navbarBotones">
-                <button class="btn btn-warning">
-                    <a class="text-decoration-none text-dark" th:href="@{/usuario/dashboard}">Volver</a>
-                </button>
-            </div>
-        </nav>
-
-        <div class="reesplandor">
-            <p th:text="${usuario.nombreu}"></p>
-            <div sec:authorize="hasAnyRole('USER','ADMIN')">
-                <form th:action="@{/usuario/modificarNombreDeUsuario/__${usuario.id}__}" method="POST" class="formulario">
-                    <div sec:authorize="hasAnyRole('USER')">
-                        <p th:if="${session.usuariosession.nombreu == usuario.nombreu}">
-                            <input type="text" class="form-control" placeholder="Modifica tu nombre de usuario" name="nombreu">
-                            <button type="submit" name="modificarNombreDeUsuario" class="btn btn-light mt-3 botones">Modificar</button>
-                        </p>
-                    </div>
-                    <div sec:authorize="hasAnyRole('ADMIN')">
-                        <p>
-                            <input type="text" class="form-control" placeholder="Modifica tu nombre de usuario" name="nombreu">
-                            <button type="submit" name="modificarNombreDeUsuario" class="btn btn-light mt-3 botones">Modificar</button>
-                        </p>
-                    </div>
-            </div>
-        </form>
-    </div>
-    <div th:if="${exitoNombre != null}" class="card text-white bg-transparent mb-3 mensajeError">
-        <div class="card-body">
-            <h5 class="card-title">Exito</h5>
-            <p class="card-text" th:text="${exitoNombre}"></p>
+<body>
+    <nav sec:authorize="isAnonymous()">
+        <span>
+            <a th:href="@{/publicaciones}">
+                <img class="headbangersLogo" src="/images/headbangersLogo.png" alt="Headbangers Cave">
+            </a>
+        </span>
+        <div class="navbarBotones">
+            <button class="btn btn-warning">
+                <a class="text-decoration-none text-dark" th:href="@{/publicaciones}">Volver</a>
+            </button>
         </div>
-    </div>
-    <div th:if="${errorNombre != null}" class="card text-white bg-transparent mb-3 mensajeError">
-        <div class="card-body">
-            <h5 class="card-title">Que gil que sos...</h5>
-            <p class="card-text" th:text="${errorNombre}"></p>
+    </nav>
+    <nav sec:authorize="hasAnyRole('USER','ADMIN')">
+        <span>
+            <a th:href="@{/usuario/dashboard}">
+                <img class="headbangersLogo" src="/images/headbangersLogo.png" alt="Headbangers Cave">
+            </a>
+        </span>
+        <div class="navbarBotones">
+            <button class="btn btn-warning">
+                <a class="text-decoration-none text-dark" th:href="@{/usuario/dashboard}">Volver</a>
+            </button>
         </div>
-    </div>
-    <br>
+    </nav>
 
-    <div th:if="${usuario.imagen == null}">
-        <img src="/images/sin_imagen_de_perfil.jpg" alt="usuario sin imagen de perfil">
-    </div>
-    <div th:unless="${usuario.imagen == null}">
-        <a th:href="${usuario.imagen.imagenUrl}">
-            <img th:src="${usuario.imagen.imagenUrl}" alt='foto de perfil' style="width: 30%" align='right'>
-        </a>
-    </div>
-    <div sec:authorize="hasAnyRole('USER','ADMIN')">
-        <form th:action="@{/usuario/modificarImagenDePerfil/__${usuario.id}__}" method="POST" enctype="multipart/form-data" class="formulario">
-            <div sec:authorize="hasAnyRole('USER')">
-                <p th:if="${session.usuariosession.nombreu == usuario.nombreu}">
-                    <input type="file" class="form-control" placeholder="modifica tu foto de perfil" name="multipartFile">
-                    <button type="submit" name="modificarImagenDePerfil" class="btn btn-light mt-3 botones">Modificar</button>
-                    <span th:unless="${usuario.imagen == null}">
-                        <button th:if="${session.usuariosession.nombreu == usuario.nombreu or hasRole == ADMIN}" class="btn btn-light mt-3 botones">
-                            <a th:href="@{/usuario/borrarImagenDePerfil/__${usuario.id}__}" class="text-decoration-none text-dark" >Eliminar</a>
-                        </button>
-                    </span>
-                </p>
-            </div>
-            <div sec:authorize="hasAnyRole('ADMIN')">
-                <p>
-                    <input type="file" class="form-control" placeholder="modifica tu foto de perfil" name="multipartFile">
-                    <button type="submit" name="modificarImagenDePerfil" class="btn btn-light mt-3 botones">Modificar</button>
-                    <span th:unless="${usuario.imagen == null}">
-                        <button th:if="${session.usuariosession.nombreu == usuario.nombreu or hasRole == ADMIN}" class="btn btn-light mt-3 botones">
-                            <a th:href="@{/usuario/borrarImagenDePerfil/__${usuario.id}__}" class="text-decoration-none text-dark" >Eliminar</a>
-                        </button>
-                    </span>
-                </p>
-            </div> 
-        </form>
-    </div>
-    <div th:if="${exitoImagen != null}" class="card text-white bg-transparent mb-3 mensajeError">
-        <div class="card-body">
-            <h5 class="card-title">Exito</h5>
-            <p class="card-text" th:text="${exitoImagen}"></p>
-        </div>
-    </div>
-    <div th:if="${errorImagen != null}" class="card text-white bg-transparent mb-3 mensajeError">
-        <div class="card-body">
-            <h5 class="card-title">Que gil que sos...</h5>
-            <p class="card-text" th:text="${errorImagen}"></p>
-        </div>
-    </div>
-
-    <p th:text="'Miembro desde: ' + ${usuario.fechalta}"></p>
-    <p th:text="'Rol: ' + ${usuario.rol}"></p>
-
-
-    <p>Publicaciones</p>
-    <div class="row mx-5">
-        <div th:each="publicacion:${publicaciones}" class="publicacionTarjeta">
-            <div class="card bg-black mt-1">
-                <div class="card-body">
-                    <div th:if="${publicacion.creador.imagen == null}">
-                        <img class="publicacionTarjeta" style="width: 30%" align='right' src="/images/sin_imagen_de_perfil.jpg" alt="usuario sin imagen de perfil">
-                    </div>
-                    <div th:unless="${publicacion.creador.imagen == null}">
-                        <img th:src="${publicacion.creador.imagen.imagenUrl}" alt='foto de perfil' style="width: 30%" align='right'>
-                    </div>
-                    <h3 th:text="${publicacion.creador.nombreu}"></h3>
-                    <h6 th:text="${publicacion.fecha}"></h6>                           
-
-                    <h3 th:text="${publicacion.titulo}"></h3>
-                    <h5 th:text="${publicacion.comentario}"></h5>
-                    <button class="btn btn-warning">
-                        <a class="text-decoration-none text-dark" th:href="@{${publicacion.link}}" target="_blank">Ir al enlace</a>
-                    </button>
-                    <a th:href="@{/editar/__${publicacion.id}__}" class="btn btn-secondary"
-                       sec:authorize="hasAnyRole('ADMIN')">Editar Publicación</a><br>
-                    <a th:href="@{/__${publicacion.id}__}" class="btn btn-danger" sec:authorize="hasRole('ADMIN')">Eliminar
-                        Publicación</a><br>
+    <div class="reesplandor">
+        <p th:text="${usuario.nombreu}"></p>
+        <div sec:authorize="hasAnyRole('USER','ADMIN')">
+            <form th:action="@{/usuario/modificarNombreDeUsuario/__${usuario.id}__}" method="POST" class="formulario">
+                <div sec:authorize="hasAnyRole('USER')">
+                    <p th:if="${session.usuariosession.nombreu == usuario.nombreu}">
+                        <input type="text" class="form-control" placeholder="modificar tu nombre de usuario" name="nombreu">
+                        <button type="submit" name="modificarNombreDeUsuario" class="btn btn-light mt-3 botones">Modificar</button>
+                    </p>
                 </div>
+                <div sec:authorize="hasAnyRole('ADMIN')">
+                    <p>
+                        <input type="text" class="form-control" placeholder="modifica tu nombre de usuario" name="nombreu">
+                        <button type="submit" name="modificarNombreDeUsuario" class="btn btn-light mt-3 botones">Modificar</button>
+                    </p>
+                </div>
+        </div>
+    </form>
+</div>
+
+<div th:replace="fragments/error.html"></div>
+<div th:replace="fragments/exito.html"></div>
+
+<br>
+
+<div th:if="${usuario.imagen == null}">
+    <img src="/images/sin_imagen_de_perfil.jpg" alt="usuario sin imagen de perfil">
+</div>
+<div th:unless="${usuario.imagen == null}">
+    <a th:href="${usuario.imagen.imagenUrl}">
+        <img th:src="${usuario.imagen.imagenUrl}" alt='foto de perfil' style="width: 30%" align='right'>
+    </a>
+</div>
+<div sec:authorize="hasAnyRole('USER','ADMIN')">
+    <form th:action="@{/usuario/modificarImagenDePerfil/__${usuario.id}__}" method="POST" enctype="multipart/form-data" class="formulario">
+        <div sec:authorize="hasAnyRole('USER')">
+            <p th:if="${session.usuariosession.nombreu == usuario.nombreu}">
+                <input type="file" class="form-control-plaintext" placeholder="modifica tu foto de perfil" name="multipartFile">
+                <button type="submit" name="modificarImagenDePerfil" class="btn btn-light mt-3 botones">Modificar</button>
+                <span th:unless="${usuario.imagen == null}">
+                    <button th:if="${session.usuariosession.nombreu == usuario.nombre}" class="btn btn-light mt-3 botones">
+                        <a th:href="@{/usuario/borrarImagenDePerfil/__${usuario.id}__}" class="text-decoration-none text-dark" >Eliminar</a>
+                    </button>
+                </span>
+            </p>
+        </div>
+        <div sec:authorize="hasAnyRole('ADMIN')">
+            <p>
+                <input type="file" class="form-control-plaintext" placeholder="modifica tu foto de perfil" name="multipartFile">
+                <button type="submit" name="modificarImagenDePerfil" class="btn btn-light mt-3 botones">Modificar</button>
+                <span th:unless="${usuario.imagen == null}">
+                    <button class="btn btn-light mt-3 botones">
+                        <a th:href="@{/usuario/borrarImagenDePerfil/__${usuario.id}__}" class="text-decoration-none text-dark" >Eliminar</a>
+                    </button>
+                </span>
+            </p>
+        </div> 
+    </form>
+</div>
+
+<p th:text="'Miembro desde: ' + ${usuario.fechalta}"></p>
+<p th:text="'Rol: ' + ${usuario.rol}"></p>
+
+
+<p>Publicaciones</p>
+<div class="row mx-5">
+    <div th:each="publicacion:${publicaciones}" class="publicacionTarjeta">
+        <div class="card bg-black mt-1">
+            <div class="card-body">
+                <div th:if="${publicacion.creador.imagen == null}">
+                    <img class="publicacionTarjeta" style="width: 30%" align='right' src="/images/sin_imagen_de_perfil.jpg" alt="usuario sin imagen de perfil">
+                </div>
+                <div th:unless="${publicacion.creador.imagen == null}">
+                    <img th:src="${publicacion.creador.imagen.imagenUrl}" alt='foto de perfil' style="width: 30%" align='right'>
+                </div>
+                <h3 th:text="${publicacion.creador.nombreu}"></h3>
+                <h6 th:text="${publicacion.fecha}"></h6>                           
+
+                <h3 th:text="${publicacion.titulo}"></h3>
+                <h5 th:text="${publicacion.comentario}"></h5>
+                <button class="btn btn-warning">
+                    <a class="text-decoration-none text-dark" th:href="@{${publicacion.link}}" target="_blank">Ir al enlace</a>
+                </button>
+                <a th:href="@{/editar/__${publicacion.id}__}" class="btn btn-secondary"
+                   sec:authorize="hasAnyRole('ADMIN')">Editar Publicación</a><br>
+                <a th:href="@{/__${publicacion.id}__}" class="btn btn-danger" sec:authorize="hasRole('ADMIN')">Eliminar
+                    Publicación</a><br>
             </div>
         </div>
     </div>
+</div>
 
 </div>
 <div class="footer">
