--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -70,6 +70,8 @@ body{
     border-radius: 20px;
     max-width: 1000px;
     padding-bottom: 15px;
+    color:white;
+    font-family:cursive;
 }
 
 .publicacionImagen {
@@ -78,12 +80,13 @@ body{
 }
 
 #tarjeta{
-    box-shadow: inset 0 0 5px green, 0 0 25px orange;
+    box-shadow: inset 0 0 5px black, 0 0 25px yellowgreen;
+    font-family: arial;
 }
 
 
 .headbangersLogo {
-    width: 19%;
+    width: 20%;
 }
 
 .logoBienvenida{
@@ -93,10 +96,11 @@ body{
 }
 
 .scroll{
+    padding-top: 10px;
     margin-top: 40px;
     margin-left: 100px;
     overflow-y: scroll;
-    height: 762px;
+    height: 817px;
     width: 50%;
 }
 
