--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -72,7 +72,7 @@
                 <input type="file" class="form-control-plaintext" placeholder="modifica tu foto de perfil" name="multipartFile">
                 <button type="submit" name="modificarImagenDePerfil" class="btn btn-light mt-3 botones">Modificar</button>
                 <span th:unless="${usuario.imagen == null}">
-                    <button th:if="${session.usuariosession.nombreu == usuario.nombre}" class="btn btn-light mt-3 botones">
+                    <button th:if="${session.usuariosession.nombreu == usuario.nombreu}" class="btn btn-light mt-3 botones">
                         <a th:href="@{/usuario/borrarImagenDePerfil/__${usuario.id}__}" class="text-decoration-none text-dark" >Eliminar</a>
                     </button>
                 </span>
